versioned_docs/version-2.17/reference/targets/docker_environment.mdx
---
title: docker_environment
# The old-style `code...code` anchors are heading level 6, and shouldn't be visible in ToC
toc_max_heading_level: 5
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

Configuration of a Docker environment used for building your code.

Environment configuration includes both Docker-specific information (including the image and platform choice), as well as environment-aware options (such as environment variables and search paths) used by Pants to execute processes in this Docker environment.

To use this environment, map this target&#x27;s address with a memorable name in `[environments-preview].names`. You can then consume this environment by specifying the name in the `environment` field defined on other targets.

Before running Pants using this environment, if you are using Docker Desktop, make sure the option **Enable default Docker socket** is enabled, you can find it in **Docker Desktop Settings &#x3E; Advanced** panel. That option tells Docker to create a socket at `/var/run/docker.sock` which Pants can use to communicate with Docker.

Backend: <span className="color--primary">`pants.core`</span>

---

<span className={styles.options}>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetagscode}
</div>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `scie-pants-linux-x86_64 --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedescriptioncode}
</div>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target.

Use `scie-pants-linux-x86_64 list --documented ::` to see all targets with descriptions.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeimagecode}
</div>

## `image`

<Field
    type_repr={`str`}
    default_repr={`None`}
>

The docker image ID to use when this environment is loaded.

This value may be any image identifier that the local Docker installation can accept. This includes image names with or without tags (e.g. `centos6` or `centos6:latest`), or image names with an immutable digest (e.g. `centos@sha256:<some_sha256_value>`).

The choice of image ID can affect the reproducibility of builds. Consider using an immutable digest if reproducibility is needed, but regularly ensure that the image is free of relevant bugs or security vulnerabilities.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeplatformcode}
</div>

## `platform`

<Field
    type_repr={`'linux_arm64' | 'linux_x86_64' | 'macos_arm64' | 'macos_x86_64' | None`}
    default_repr={`None`}
>

If set, Docker will always use the specified platform when pulling and running the image.

If unset, Pants will default to the CPU architecture of your local host machine. For example, if you are running on Apple Silicon, it will use `linux_arm64`, whereas running on Intel macOS will use `linux_x86_64`. This mirrors Docker&#x27;s behavior when `--platform` is left off.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codefallback_environmentcode}
</div>

## `fallback_environment`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

The environment to fallback to when this Docker environment cannot be used because either the global option `--docker-execution` is false, or the field `platform` is not compatible with the local host&#x27;s CPU architecture (this is only an issue when the local host is Linux; macOS is fine).

Must be an environment name from the option `[environments-preview].names`, the special string `__local__` to use the relevant local environment, or the Python value `None` to error when this specific Docker environment cannot be used.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeshell_setup_executable_search_pathscode}
</div>

## `shell_setup_executable_search_paths`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
    backend="pants.backend.shell"
>

Overrides the default value from the option `[shell-setup].executable_search_paths` when this environment target is active.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codego_generate_env_varscode}
</div>

## `go_generate_env_vars`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
    backend="pants.backend.experimental.go"
>

Overrides the default value from the option `[go-generate].env_vars` when this environment target is active.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codegolang_cgo_fortran_binary_namecode}
</div>

## `golang_cgo_fortran_binary_name`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
    backend="pants.backend.experimental.go"
>

Overrides the default value from the option `[golang].cgo_fortran_binary_name` when this environment target is active.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codegolang_cgo_c_flagscode}
</div>

## `golang_cgo_c_flags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
    backend="pants.backend.experimental.go"
>

Overrides the default value from the option `[golang].cgo_c_flags` when this environment target is active.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codegolang_cgo_gcc_binary_namecode}
</div>

## `golang_cgo_gcc_binary_name`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
    backend="pants.backend.experimental.go"
>

Overrides the default value from the option `[golang].cgo_gcc_binary_name` when this environment target is active.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codegolang_subprocess_env_varscode}
</div>

## `golang_subprocess_env_vars`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
    backend="pants.backend.experimental.go"
>

Overrides the default value from the option `[golang].subprocess_env_vars` when this environment target is active.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codenodejs_search_pathcode}
</div>

## `nodejs_search_path`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
    backend="pants.backend.experimental.openapi.lint.spectral"
>

Overrides the default value from the option `[nodejs].search_path` when this environment target is active.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codegolang_cgo_fortran_flagscode}
</div>

## `golang_cgo_fortran_flags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
    backend="pants.backend.experimental.go"
>

Overrides the default value from the option `[golang].cgo_fortran_flags` when this environment target is active.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codesubprocess_environment_env_varscode}
</div>

## `subprocess_environment_env_vars`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
    backend="pants.core"
>

Overrides the default value from the option `[subprocess-environment].env_vars` when this environment target is active.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codepex_executable_search_pathscode}
</div>

## `pex_executable_search_paths`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
    backend="pants.core"
>

Overrides the default value from the option `[pex].executable_search_paths` when this environment target is active.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codegolang_cgo_cxx_flagscode}
</div>

## `golang_cgo_cxx_flags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
    backend="pants.backend.experimental.go"
>

Overrides the default value from the option `[golang].cgo_cxx_flags` when this environment target is active.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codepython_native_code_cpp_flagscode}
</div>

## `python_native_code_cpp_flags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
    backend="pants.core"
>

Overrides the default value from the option `[python-native-code].cpp_flags` when this environment target is active.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedocker_executable_search_pathscode}
</div>

## `docker_executable_search_paths`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
    backend="pants.backend.docker"
>

Overrides the default value from the option `[docker].executable_search_paths` when this environment target is active.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codegolang_cgo_gxx_binary_namecode}
</div>

## `golang_cgo_gxx_binary_name`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
    backend="pants.backend.experimental.go"
>

Overrides the default value from the option `[golang].cgo_gxx_binary_name` when this environment target is active.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codegolang_external_linker_binary_namecode}
</div>

## `golang_external_linker_binary_name`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
    backend="pants.backend.experimental.go"
>

Overrides the default value from the option `[golang].external_linker_binary_name` when this environment target is active.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codejvm_global_optionscode}
</div>

## `jvm_global_options`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
    backend="pants.backend.experimental.java"
>

Overrides the default value from the option `[jvm].global_options` when this environment target is active.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetest_extra_env_varscode}
</div>

## `test_extra_env_vars`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
    backend="pants.core"
>

Overrides the default value from the option `[test].extra_env_vars` when this environment target is active.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeapache_thrift_thrift_search_pathscode}
</div>

## `apache_thrift_thrift_search_paths`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
    backend="pants.backend.codegen.thrift.apache.python"
>

Overrides the default value from the option `[apache-thrift].thrift_search_paths` when this environment target is active.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codegolang_cgo_tool_search_pathscode}
</div>

## `golang_cgo_tool_search_paths`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
    backend="pants.backend.experimental.go"
>

Overrides the default value from the option `[golang].cgo_tool_search_paths` when this environment target is active.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codenodejs_corepack_env_varscode}
</div>

## `nodejs_corepack_env_vars`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
    backend="pants.backend.experimental.openapi.lint.spectral"
>

Overrides the default value from the option `[nodejs].corepack_env_vars` when this environment target is active.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codegolang_cgo_linker_flagscode}
</div>

## `golang_cgo_linker_flags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
    backend="pants.backend.experimental.go"
>

Overrides the default value from the option `[golang].cgo_linker_flags` when this environment target is active.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codegolang_go_search_pathscode}
</div>

## `golang_go_search_paths`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
    backend="pants.backend.experimental.go"
>

Overrides the default value from the option `[golang].go_search_paths` when this environment target is active.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codenodejs_executable_search_pathscode}
</div>

## `nodejs_executable_search_paths`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
    backend="pants.backend.experimental.openapi.lint.spectral"
>

Overrides the default value from the option `[nodejs].executable_search_paths` when this environment target is active.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedocker_env_varscode}
</div>

## `docker_env_vars`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
    backend="pants.backend.docker"
>

Overrides the default value from the option `[docker].env_vars` when this environment target is active.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codepython_native_code_ld_flagscode}
</div>

## `python_native_code_ld_flags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
    backend="pants.core"
>

Overrides the default value from the option `[python-native-code].ld_flags` when this environment target is active.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codepython_bootstrap_search_pathcode}
</div>

## `python_bootstrap_search_path`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
    backend="pants.core"
>

Overrides the default value from the option `[python-bootstrap].search_path` when this environment target is active.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codepython_bootstrap_namescode}
</div>

## `python_bootstrap_names`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
    backend="pants.core"
>

Overrides the default value from the option `[python-bootstrap].names` when this environment target is active.

</Field>

</span>
